[package]
name = "typed-array"
version = "0.2.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
edition = "2018"
description = "A wrapper for all typed array types from `js_sys` that implements common functionality and useful conversions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThomasdenH/typed-array"
keywords = ["javascript", "wasm", "typed-array"]
categories = ["wasm"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
err-derive = "0.1.5"

[dev-dependencies]
version-sync = "0.8"
wasm-bindgen-test = "0.2"
